[gd_scene load_steps=27 format=3 uid="uid://4yl4bjq6n3j0"]

[ext_resource type="Script" path="res://scripts/entities/stats/stat_block.gd" id="1_7khcy"]
[ext_resource type="Script" path="res://scripts/entities/stats/stat.gd" id="2_ee77u"]
[ext_resource type="Shader" path="res://assets/shaders/canvas_group_overlay.gdshader" id="3_v2tg6"]
[ext_resource type="Script" path="res://scripts/enemies/hit_flash.gd" id="5_hdrvk"]
[ext_resource type="Texture2D" uid="uid://e0sfdob3w0wq" path="res://assets/art/enemies/lantern_fly/lantern_fly_body.png" id="5_yvlk1"]
[ext_resource type="Texture2D" uid="uid://dkihl8n28o6s1" path="res://assets/art/enemies/lantern_fly/lantern_fly_wings.png" id="6_c1wu3"]
[ext_resource type="Script" path="res://scripts/entities/hit_detector.gd" id="6_f1gw1"]
[ext_resource type="Texture2D" uid="uid://dnyow5xs3ocek" path="res://assets/art/enemies/lantern_fly/lantern_fly_star_wing_closed.png" id="7_jgj1t"]
[ext_resource type="Script" path="res://scripts/entities/hit_taker.gd" id="7_sa3ys"]
[ext_resource type="Texture2D" uid="uid://cwigth6ydun8x" path="res://assets/art/enemies/lantern_fly/lantern_fly_inner_wing_open.png" id="7_wpmdh"]
[ext_resource type="Texture2D" uid="uid://ca0rcat51nijn" path="res://assets/art/enemies/lantern_fly/lantern_fly_wing_open.png" id="8_hrfi6"]
[ext_resource type="Script" path="res://scripts/entities/health.gd" id="9_f3qxl"]
[ext_resource type="Texture2D" uid="uid://c786oq2wcdo7i" path="res://assets/art/enemies/lantern_fly/lantern_fly_star_wing_open.png" id="10_a0e6v"]
[ext_resource type="Script" path="res://scripts/entities/passive_regen.gd" id="10_yseyw"]
[ext_resource type="Script" path="res://scripts/entities/team.gd" id="11_otog1"]
[ext_resource type="Script" path="res://scripts/entities/entity_tracker.gd" id="13_5hkwj"]
[ext_resource type="Script" path="res://scripts/effects/effect_holder.gd" id="14_ckbde"]
[ext_resource type="Resource" uid="uid://x0nym0cu3uxm" path="res://libraries/effect_library.tres" id="15_d5h1i"]
[ext_resource type="Script" path="res://scripts/ai/lantern_fly_ai.gd" id="16_82176"]
[ext_resource type="PackedScene" uid="uid://dp6ibxtg4brre" path="res://prefabs/projectiles/circle_bullet.tscn" id="17_nil5c"]
[ext_resource type="AnimationLibrary" uid="uid://drc40t2iv6jme" path="res://assets/animations/lantern_fly.tres" id="21_bymds"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qynvl"]
shader = ExtResource("3_v2tg6")
shader_parameter/overlay_color = Color(0, 0, 0, 0)
shader_parameter/overlay_amount = null
shader_parameter/overlay_enabled = false
shader_parameter/overlay_2_color = Color(1, 1, 1, 1)
shader_parameter/overlay_2_amount = 0.0
shader_parameter/overlay_2_enabled = true

[sub_resource type="CircleShape2D" id="CircleShape2D_u53qh"]
radius = 33.2415

[sub_resource type="CircleShape2D" id="CircleShape2D_kdnrq"]
radius = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dl1ub"]
radius = 1280.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gsvs6"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)

[node name="LanternFly" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1

[node name="StatBlock" type="Node" parent="."]
script = ExtResource("1_7khcy")

[node name="MaxHealth" type="Node" parent="StatBlock"]
script = ExtResource("2_ee77u")
type = 1
base_amount = 50

[node name="Regen" type="Node" parent="StatBlock"]
script = ExtResource("2_ee77u")
type = 2
base_amount = 20

[node name="Damage" type="Node" parent="StatBlock"]
script = ExtResource("2_ee77u")
type = 5
base_amount = 20

[node name="Speed" type="Node" parent="StatBlock"]
script = ExtResource("2_ee77u")
base_amount = 70

[node name="Visual" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_qynvl")

[node name="HitFlash" type="Node" parent="Visual" node_paths=PackedStringArray("health")]
script = ExtResource("5_hdrvk")
health = NodePath("../../Health")

[node name="Body" type="Sprite2D" parent="Visual"]
rotation = 0.0872665
texture = ExtResource("5_yvlk1")

[node name="WingsClosed" type="Sprite2D" parent="Visual"]
position = Vector2(0, 3.568)
texture = ExtResource("6_c1wu3")

[node name="ClosedPattern" type="Sprite2D" parent="Visual/WingsClosed"]
texture = ExtResource("7_jgj1t")

[node name="WingsOpen" type="Node2D" parent="Visual"]
visible = false

[node name="Node2D" type="Node2D" parent="Visual/WingsOpen"]
visible = false
position = Vector2(-12, -30)

[node name="LeftOuter" type="Sprite2D" parent="Visual/WingsOpen"]
position = Vector2(-12, -30)
rotation = -0.030004
texture = ExtResource("7_wpmdh")
offset = Vector2(12, 30)

[node name="LeftInner" type="Sprite2D" parent="Visual/WingsOpen/LeftOuter"]
rotation = -0.231256
texture = ExtResource("8_hrfi6")
offset = Vector2(12, 30)

[node name="LeftOpenPattern" type="Sprite2D" parent="Visual/WingsOpen/LeftOuter/LeftInner"]
texture = ExtResource("10_a0e6v")
offset = Vector2(12, 30)

[node name="RightOuter" type="Sprite2D" parent="Visual/WingsOpen"]
position = Vector2(12, -30)
rotation = 0.0300879
scale = Vector2(-1, 1)
texture = ExtResource("7_wpmdh")
offset = Vector2(12, 30)

[node name="RightInner" type="Sprite2D" parent="Visual/WingsOpen/RightOuter"]
rotation = -0.23112
texture = ExtResource("8_hrfi6")
offset = Vector2(12, 30)

[node name="RightOpenPattern" type="Sprite2D" parent="Visual/WingsOpen/RightOuter/RightInner"]
texture = ExtResource("10_a0e6v")
offset = Vector2(12, 30)

[node name="WallCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u53qh")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("entity", "team")]
script = ExtResource("6_f1gw1")
entity = NodePath("..")
mode = 2
team = NodePath("../Team")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_kdnrq")

[node name="HitTaker" type="Node" parent="Hurtbox" node_paths=PackedStringArray("health", "hurtbox")]
script = ExtResource("7_sa3ys")
health = NodePath("../../Health")
hurtbox = NodePath("..")

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("max_health")]
script = ExtResource("9_f3qxl")
max_health = NodePath("../StatBlock/MaxHealth")

[node name="PassiveRegen" type="Node" parent="Health" node_paths=PackedStringArray("health", "regen_stat")]
script = ExtResource("10_yseyw")
health = NodePath("..")
regen_stat = NodePath("../../StatBlock/Regen")

[node name="Team" type="Node" parent="."]
script = ExtResource("11_otog1")
team = "Enemy"

[node name="LanternFlyAI" type="Node2D" parent="." node_paths=PackedStringArray("enemy_detector", "speed", "animation_player", "team")]
script = ExtResource("16_82176")
enemy_detector = NodePath("EntityTracker")
speed = NodePath("../StatBlock/Speed")
animation_player = NodePath("../AnimationPlayer")
bullet_prefab = ExtResource("17_nil5c")
bullet_pattern = 3
team = NodePath("../Team")

[node name="EntityTracker" type="Area2D" parent="LanternFlyAI" node_paths=PackedStringArray("team")]
script = ExtResource("13_5hkwj")
mode = 2
team = NodePath("../../Team")
track_nearest_entity = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LanternFlyAI/EntityTracker"]
shape = SubResource("CircleShape2D_dl1ub")
debug_color = Color(0, 0.701961, 0.305882, 0.0941176)

[node name="EffectHolder" type="Node" parent="."]
script = ExtResource("14_ckbde")
effect_library = ExtResource("15_d5h1i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"lantern_fly": ExtResource("21_bymds")
}

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
process_material = SubResource("ParticleProcessMaterial_gsvs6")
